Split up sample programs into small modules.
Makefile has installer target now.

Distutils setup.py now working.


git-svn-id: file:///Library/svn/aculab/trunk@12 cae33c24-edb7-11db-8150-7705e9bc5c8f

--- a/python/makefile
+++ b/python/makefile
@@ -46,6 +46,9 @@ test:
 install:
 	python setup.py install
 
+installer:
+	python setup.py bdist_wininst
+
 clean:
 	rm -f *.dll *.exe *.obj *.lib *.exp *.pyc \
 		acu.i *_wrap.c *_wrap.doc
