Makefile improvements, adjustments for TiNG on Linux.
git-svn-id: file:///Library/svn/aculab/trunk@74 cae33c24-edb7-11db-8150-7705e9bc5c8f

--- a/python/makefile.unix
+++ b/python/makefile.unix
@@ -5,7 +5,7 @@ DTK := ../dtk132
 CXX := gcc
 
 TiNGTYPE := LINUX
-DEFINES := -DUNIX_SYSTEM -DSM_POLL_UNIX -DTiNGTYPE_$(TiNGTYPE)
+DEFINES := -DUNIX_SYSTEM -DSM_POLL_UNIX -DTiNGTYPE_$(TiNGTYPE) -DHAVE_TiNG
 
 C_DEFINES := -DNDEBUG -fPIC $(DEFINES) -I$(DTK)/call/include -I$(DTK)/switch/include -I$(DTK)/ting/include
 
