--- a/python/makefile.win32
+++ b/python/makefile.win32
@@ -3,11 +3,22 @@ CXX		:= cl /MD
 
 DEFINES := -DWIN32
 
-SWIG    := c:/swig-1.3.19
-SWIGLIB := $(SWIG)/Lib
+# check for our standard locations of SWIG and Python
 
-PYTHON_INCLUDES = c:/python22/include
-PYTHON_LIBS	= c:/python22/libs/python22.lib advapi32.lib
+SWIG := $(dir $(strip $(wildcard c:/swig-1.3.19/swig.exe) \
+                      $(wildcard d:/swig-1.3.19/swig.exe) \
+                      $(wildcard e:/swig-1.3.19/swig.exe)))
+SWIGLIB := $(SWIG)Lib
+
+PYTHON := $(dir $(strip $(wildcard c:/python22/python.exe) \
+                        $(wildcard d:/python22/python.exe) \
+                        $(wildcard e:/python22/python.exe) \
+                        $(wildcard c:/python23/python.exe) \
+                        $(wildcard d:/python23/python.exe) \
+                        $(wildcard e:/python23/python.exe)))
+
+PYTHON_INCLUDES = $(PYTHON)include
+PYTHON_LIBS	= $(PYTHON)libs/python22.lib advapi32.lib
 
 OBJS	:= acu_wrap.obj cllib.obj clnt.obj common.obj swlib.obj swnt.obj \
 			smnt.obj smbesp.obj smlib.obj smfwcaps.obj
@@ -30,7 +41,7 @@ acu.i: top.i ../include/mvcldrvr.h ../include/mvswdrvr.h ../include/smdrvr.h \
 	cat bottom.i >>$@
 
 acu_wrap.c aculab/lowlevel.py: acu.i
-	$(SWIG)/swig $(DEFINES) -I$(SWIGLIB) -I$(SWIGLIB)/Python -I../include \
+	$(SWIG)swig $(DEFINES) -I$(SWIGLIB) -I$(SWIGLIB)/Python -I../include \
 					-shadow -python $<
 	mv lowlevel.py aculab
 
