--- a/python/makefile.unix
+++ b/python/makefile.unix
@@ -1,13 +1,14 @@
 # makefile for aculab swig wrapper
 
 DTK := /usr/local/aculab/v6
+FAX := ProsodyLibraries/Group3fax_LINUX_V6_rel321/API
 
 CXX := gcc
 
 TiNGTYPE := LINUX
 DEFINES := -DACU_LINUX -DSM_POLL_UNIX -DTiNGTYPE_$(TiNGTYPE) -DTiNG_USE_V6
 
-DTK_INCLUDE = -I$(DTK)/include -I$(DTK)/ting/include
+DTK_INCLUDE = -I$(DTK)/include -I$(DTK)/ting/include -I$(DTK)/$(FAX)/include
 
 C_DEFINES := -DNDEBUG -fPIC $(DEFINES) $(DTK_INCLUDE)
 
@@ -17,9 +18,14 @@ PYTHON_LIBS = -lpython2.4
 
 OBJS	:= acu_wrap.o
 
-# 
-EXTRA_OBJS = -Xlinker -R$(DTK)/lib -L$(DTK)/lib -lacu_common -lacu_cl \
-			-lacu_sw -lacu_res $(DTK)/ting/apilib/gen-${TiNGTYPE}_V6/TiNGlib.o
+#
+EXTRA_OBJS = -Xlinker -R$(DTK)/lib -L$(DTK)/lib \
+			$(DTK)/$(FAX)/lib/actiff.o $(DTK)/$(FAX)/lib/faxlib.o \
+			$(DTK)/ting/libutil/gen-$(TiNGTYPE)_V6/aculog.o \
+			$(DTK)/ting/libutil/gen-$(TiNGTYPE)_V6/vseprintf.o \
+			$(DTK)/ting/libutil/gen-$(TiNGTYPE)_V6/bfile.o \
+			$(DTK)/ting/libutil/gen-$(TiNGTYPE)_V6/bfopen.o \
+			-lacu_cl -lacu_sw -lacu_res -lacu_common -lTiNG
 
 all: aculab/_lowlevel.so aculab/lowlevel.py info
 
@@ -31,6 +37,9 @@ cl_lib.h2: $(DTK)/include/cl_lib.h cl_lib.patch
 
 res_lib.h2: $(DTK)/include/res_lib.h res_lib.patch
 	patch -o $@ $(DTK)/include/res_lib.h res_lib.patch
+
+actiff.h2: $(DTK)/$(FAX)/include/actiff.h actiff.patch
+	patch -o $@ $(DTK)/$(FAX)/include/actiff.h actiff.patch
 
 # builds are very slow - only rebuild if cl_lib.h changes
 sized_struct.i: $(DTK)/include/cl_lib.h $(DTK)/include/sw_lib.h
@@ -63,6 +72,7 @@ installer:
 patch: $(DTK)/include/cl_lib.h
 	-diff -u -b $(DTK)/include/cl_lib.h cl_lib.h2 > cl_lib.patch
 	-diff -u -b $(DTK)/include/res_lib.h res_lib.h2 > res_lib.patch
+	-diff -u -b $(DTK)/$(FAX)/include/actiff.h actiff.h2 > actiff.patch
 
 clean:
 	rm -f aculab/*.so *.o aculab/*.pyc \
