makefile.unix does generate barfage when more than one python installation is found.
callout.py fixed for multiple outgoing calls.


git-svn-id: file:///Library/svn/aculab/trunk@127 cae33c24-edb7-11db-8150-7705e9bc5c8f

--- a/python/makefile.unix
+++ b/python/makefile.unix
@@ -12,11 +12,13 @@ DTK_INCLUDE = -I$(DTK)/include -I$(DTK)/ting/include -I$(DTK)/$(FAX)/include
 
 C_DEFINES := -DNDEBUG -fPIC $(DEFINES) $(DTK_INCLUDE)
 
-PYTHON_INCLUDE := $(strip $(wildcard /usr/local/include/python2.4) \
-                           $(wildcard /usr/include/python2.4))
+PYTHON_INCLUDE := $(firstword $(strip \
+						   	$(wildcard /usr/local/include/python2.4) \
+                            $(wildcard /usr/include/python2.4)))
 
-PYTHON_LIBDIR := $(strip $(wildcard /usr/local/lib/python2.4/config/) \
-                       $(wildcard /usr/lib/python2.4/config/))
+PYTHON_LIBDIR := $(firstword $(strip \
+                       $(wildcard /usr/local/lib/python2.4/config/) \
+                       $(wildcard /usr/lib/python2.4/config/)))
 
 PYTHON_LIBS = -lpython2.4
 
