Removed default targets not in CVS.
git-svn-id: file:///Library/svn/aculab/trunk@129 cae33c24-edb7-11db-8150-7705e9bc5c8f

--- a/python/makefile.unix
+++ b/python/makefile.unix
@@ -33,7 +33,7 @@ EXTRA_OBJS = -Xlinker -R$(DTK)/lib -L$(DTK)/lib \
 			$(DTK)/ting/libutil/gen-$(TiNGTYPE)_V6/bfopen.o \
 			-lacu_cl -lacu_sw -lacu_res -lacu_common -lTiNG -lstdc++
 
-all: aculab/_lowlevel.so aculab/lowlevel.py info rxfax3 dcraw
+all: aculab/_lowlevel.so aculab/lowlevel.py info
 
 aculab/_lowlevel.so: $(OBJS)
 	$(CXX) -shared -o $@ $(OBJS) $(EXTRA_OBJS) -L$(PYTHON_LIBDIR) $(PYTHON_LIBS)
