Adjustments for 6.4 call drivers.
git-svn-id: file:///Library/svn/aculab/trunk@207 cae33c24-edb7-11db-8150-7705e9bc5c8f

--- a/python/Makefile
+++ b/python/Makefile
@@ -1,7 +1,6 @@
 # check for signs of Unix
 find_init := $(strip $(wildcard /sbin/init) \
-	                     $(wildcard /usr/sbin/init) \
-	 	                 $(wildcard /hurd/auth))
+	                     $(wildcard /usr/sbin/init))
 
 # check for signs of Aculab v6
 find_v6 := $(strip $(wildcard $(ACULAB_ROOT)/include/cl_lib.h))
@@ -34,14 +33,14 @@ ifneq ($(find_v6),)
 cl_lib.h2: $(DTK)/include/cl_lib.h cl_lib.patch
 	patch -o $@ $(DTK)/include/cl_lib.h cl_lib.patch
 
-res_lib.h2: $(DTK)/include/res_lib.h res_lib.patch
-	patch -o $@ $(DTK)/include/res_lib.h res_lib.patch
+#res_lib.h2: $(DTK)/include/res_lib.h res_lib.patch
+#	patch -o $@ $(DTK)/include/res_lib.h res_lib.patch
 
 #actiff.h2: $(DTK)/$(FAX)/include/actiff.h actiff.patch
 #	patch -o $@ $(DTK)/$(FAX)/include/actiff.h actiff.patch
 
-bfile.h2: $(DTK)/ting/include/bfile.h bfile.patch
-	patch -o $@ $(DTK)/ting/include/bfile.h bfile.patch
+#bfile.h2: $(DTK)/ting/include/bfile.h bfile.patch
+#	patch -o $@ $(DTK)/ting/include/bfile.h bfile.patch
 
 # builds are very slow - only rebuild if cl_lib.h changes
 sized_struct.i: $(DTK)/include/cl_lib.h $(DTK)/include/sw_lib.h
@@ -52,6 +51,10 @@ else
 smosintf.h2: $(DTK)/speech/include/smosintf.h smosintf.patch
 	patch -o $@ $(DTK)/speech/include/smosintf.h smosintf.patch
 endif
+
+# To generate a patch, (with the example cl_lib.h), copy a the original 
+# cl_lib.h to cl_lib.h2, edit it, and then do:
+# diff -u $(DTK)/include/cl_lib.h cl_lib.h2 > cl_lib.patch
 
 install:
 	python setup.py install
