Don't apply SIZED_STRUCT macro to ACU_SNAPSHOT_PARMS.
git-svn-id: file:///Library/svn/aculab/trunk@230 cae33c24-edb7-11db-8150-7705e9bc5c8f

--- a/python/Makefile
+++ b/python/Makefile
@@ -32,9 +32,10 @@ cl_lib.h2: $(DTK)/include/cl_lib.h cl_lib.patch
 #	patch -o $@ $(DTK)/ting/include/bfile.h bfile.patch
 
 # builds are very slow - only rebuild if cl_lib.h changes
+# exclude structures that are %extended already
 sized_struct.i: $(DTK)/include/cl_lib.h $(DTK)/include/sw_lib.h
 	swig $(DEFINES) $(ACULAB_INCLUDE) -xml -xmllite lowlevel.i
-	python sized_struct.py lowlevel_wrap.xml
+	python sized_struct.py -x ACU_SNAPSHOT_PARMS lowlevel_wrap.xml
 	rm lowlevel_wrap.xml
 
 lowlevel_wrap.c aculab/lowlevel.py: lowlevel.i cl_lib.h2 sized_struct.i
