Work on T.38 gatewaying.
Fixed stupid bug in Makefile: install.py was renamed to disthelper.py.

Some renames for methods.


git-svn-id: file:///Library/svn/aculab/trunk@319 cae33c24-edb7-11db-8150-7705e9bc5c8f

--- a/python/Makefile
+++ b/python/Makefile
@@ -63,7 +63,7 @@ aculab/_lowlevel$(SO): $(OBJS)
 # diff -u $(DTK)/include/cl_lib.h cl_lib.h2 > cl_lib.patch
 
 install:
-	python install.py aculab
+	python disthelper.py aculab
 
 clean:
 	rm -f aculab/*$(SO) *$(O) aculab/*.pyc \
